--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "GRPC test project",
   "main": "index.js",
   "scripts": {
+    "proto:gen": "proto-loader-gen-types --grpcLib=@grpc/grpc-js --outDir=proto/ schemas/*",
+    "server": "ts-node server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/makzimko/grpc-test/issues"
   },
-  "homepage": "https://github.com/makzimko/grpc-test#readme"
+  "homepage": "https://github.com/makzimko/grpc-test#readme",
+  "dependencies": {
+    "@grpc/grpc-js": "^1.6.7",
+    "@grpc/proto-loader": "^0.7.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
+  }
 }
