--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "proto:gen": "proto-loader-gen-types --grpcLib=@grpc/grpc-js --outDir=proto/ schemas/*",
     "server": "ts-node server",
+    "client": "ts-node client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
